01_K8s_Exercises/task_10_Project/Project/microservices-demo/kubernetes-manifests/09_policy/network-policy.yml
# Default deny all for the namespace but DNS (port 53) egress allowed
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-allow-dns-policy
  namespace: google-microservice
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-frontend-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - podSelector:
        matchLabels:
          app: loadgenerator
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
           app: adservice
    ports:
    - protocol: TCP
      port: 9555
    
  - to:
    - podSelector:
        matchLabels:
           app: cartservice
    ports:
    - protocol: TCP
      port: 7070
  
  - to:
    - podSelector:
        matchLabels:
           app: checkoutservice
    ports:
    - protocol: TCP
      port: 5050

  - to:
    - podSelector:
        matchLabels:
           app: currencyservice
    ports:
    - protocol: TCP
      port: 7000

  - to:
    - podSelector:
        matchLabels:
           app: productcatalogservice
    ports:
    - protocol: TCP
      port: 3550

  - to:
    - podSelector:
        matchLabels:
           app: recommendationservice
    ports:
    - protocol: TCP
      port: 8080

  - to:
    - podSelector:
        matchLabels:
           app: shippingservice
    ports:
    - protocol: TCP
      port: 50051

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-productcatalogservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: productcatalogservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 3550

  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - protocol: TCP
      port: 3550

  - from:
    - podSelector:
        matchLabels:
          app: recommendationservice
    ports:
    - protocol: TCP
      port: 3550

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-currencyservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 7000

  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - protocol: TCP
      port: 7000

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-cartservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: cartservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 7070

  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - protocol: TCP
      port: 7070
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis-cart
    ports:
    - protocol: TCP
      port: 6379

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-recommendationservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: recommendationservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: productcatalogservice
    ports:
    - protocol: TCP
      port: 3550

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-checkoutservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 5050
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: cartservice
    ports:
    - protocol: TCP
      port: 7070
  - to:
    - podSelector:
        matchLabels:
          app: productcatalogservice
    ports:
    - protocol: TCP
      port: 3550
  - to:
    - podSelector:
        matchLabels:
          app: shippingservice
    ports:
    - protocol: TCP
      port: 50051
  - to:
    - podSelector:
        matchLabels:
          app: paymentservice
    ports:
    - protocol: TCP
      port: 50051
  - to:
    - podSelector:
        matchLabels:
          app: emailservice
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          app: currencyservice
    ports:
    - protocol: TCP
      port: 7000

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-adservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 9555

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-shippingservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: shippingservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 50051

  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - protocol: TCP
      port: 50051

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-paymentservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: paymentservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - protocol: TCP
      port: 50051

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-emailservice-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - protocol: TCP
      port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-redis-cart-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: redis-cart
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cartservice
    ports:
    - protocol: TCP
      port: 6379

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-microservice-loadgenerator-network-policy
  namespace: google-microservice
spec:
  podSelector:
    matchLabels:
      app: loadgenerator
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
